# cpp_neural_clustering

./: .gitignore  CMakeLists.txt  README.md
Kegal_detaset/: circles_detaset.csv
class/: matrix.cpp
class/Matrix/: matrix.cpp  matrix.h  readme.md
neuro_model/: dataset.cpp  dataset.h  main  main.cpp  model.txt  network_log.txt  network_log2.txt  neural_net.cpp  neural_net.h  neurp.cpp  plot.py  readme.md  trainer.cpp  trainer.h  visualize.cpp  visualize.h
neuro_model/DataSet/: README.md  dataset.cpp  dataset.h
neuro_model/Neural_Net/: README.md  neural_net.cpp  neural_net.h
neuro_model/Trainer_class/: README.md  trainer.cpp  trainer.h
neuro_model/main.dSYM/Contents/Resources/DWARF/: main
parser/: pars.cpp  pars.h
test/: test_matrix.cpp  test_neural_net.cpp  test_trainer.cpp
